--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@floating-ui/react": "^0.19.1",
 		"@radix-ui/react-alert-dialog": "^1.0.3",
+		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.4",
 		"@radix-ui/react-popover": "1.0.5",
 		"@radix-ui/react-toast": "^1.1.3",
